# generic-command-framework

./: CMakeLists.txt  IProcessor.h  command.h  command2.h  command3.h  commandDoA.h  command_container.h  commands.h  doc_type_traits.h  jsondoc.cpp  jsondoc.h  loradoc.cpp  loradoc.h  main.cpp  message.cpp  processor.h
v1/: CMakeLists.txt  commandDoA.h  commands.h  common.h  json_parser.h  main.cpp  message.h
v3/: App.h  CMakeLists.txt  StorageManager.h  command.h  command_container.h  main.cpp
v4/: main.cpp  storage-eeprom.cpp
v5/: main.cpp
